# ImatiSTL

./: .gitignore  CMakeLists.txt  README.txt  changelog.txt
include/ImatiSTL/: cutIntersections.h  dijkstraGraph.h  imatistl.h  marchIntersections.h  trimesh.h
include/Kernel/: basics.h  coordinates.h  matrix.h  point.h
include/TMesh/: edge.h  edgeHeap.h  faceClustering.h  simplification.h  tin.h  triangle.h
make/: Makefile  Makefile.ImatiSTL  Makefile.MeshFix  Makefile.test  README-UNIX.txt
make/eggmakelib/: defaults.mk  engine.mk  multitarget.mk
mpir32/: mpir.lib
mpir64/: config.h  gmp.h  longlong.h  mpir.lib
src/Algorithms/: checkAndRepair.cpp  delaunize.cpp  detectIntersections.cpp  faceClustering.cpp  featureRecover.cpp  holeFilling.cpp  simplification.cpp  smoothing.cpp  spherize.cpp  subdivision.cpp
src/ImatiSTL/: computeOuterHull.cpp  cutIntersections.cpp  dijkstraGraph.cpp  epsilonSampling.cpp  marchIntersections.cpp  offset.cpp  test.cpp  uniformRemesh.cpp
src/Kernel/: coordinates.cpp  matrix.cpp  orientation.cpp  point.cpp  tmesh.cpp
src/TMesh/: edge.cpp  edgeHeap.cpp  io.cpp  tin.cpp  triangle.cpp  vertex.cpp
vc12/: ImatiSTL_All.sln  imatistl.vcxproj  imatistl_test.vcxproj  kernel.vcxproj  tmesh.vcxproj
